# sigfox-chicken-coop

./: .gitignore  .gitmodules  README.md
firmware/: .gitmodules  CMakeLists.txt  compile_and_flash.sh  compile_and_post.sh  sdkconfig
firmware/components/renard-phy-s2lp-container/: CMakeLists.txt
firmware/main/: CMakeLists.txt  Kconfig.projbuild
firmware/main/src/: alarmnvs.c  alarmnvs.h  battery.c  battery.h  bme280adaptor.c  bme280adaptor.h  buzzer.c  buzzer.h  desired_door_state.c  desired_door_state.h  i2cdevice.c  i2cdevice.h  ina219.c  ina219.h  input.c  input.h  main.c  motor.c  motor.h  ota.c  ota.h  rtc_wake_stub.c  runtime_status.c  runtime_status.h  rv3029.c  rv3029.h  sigfox.c  sigfox.h  solar.c  solar.h  web_routes_ota.c  web_routes_ota.h  web_routes_ui.c  web_routes_ui.h  web_server.c  web_server.h
firmware/main/web/: app.css  app.js  index.html
hardware/: fp-info-cache  fp-lib-table  huhnsfx-cache.lib  huhnsfx-rescue.lib  huhnsfx.kicad_pcb  huhnsfx.kicad_prl  huhnsfx.kicad_pro  huhnsfx.net  huhnsfx.pro  huhnsfx.sch  motor.sch  rtc.sch  s2lp-cache.lib  s2lp.sch  solarcharger.sch  sym-lib-table
hardware/lib/: balf-spi2-01d3.lib  mic5239-3.3ymm.lib  rv3029c2.lib  s2lp.lib
hardware/mod/: BALF-SPI-01D3.kicad_mod  CMI-9653S-SMT.mod  CMT-4023S.kicad_mod  CUI_CMI-9653S-SMT.kicad_mod  D_SMB_Reverse.kicad_mod  WAGO-233-512.kicad_mod  rv3029.kicad_mod
